# BulletsOnWheels

./: Cargo.toml  README.md  build_sprites.rs  notes.md  rustfmt.toml
.github/workflows/: main.yml
src/: character.rs  gamepad.rs  main.rs  physics.rs  projectile.rs  setup.rs  weapon.rs
src/character/: docs.md  enemy.rs  enemy_ai.rs  mod.rs  player.rs  system.rs
src/characters/: character.rs  enemy.rs  player.rs
src/gamestate/: mod.rs  start.rs
src/input/: gamepad.rs  keyboard.rs  mod.rs
src/projectiles/: projectile.rs
src/terrain/: level1.rs  map.rs  mod.rs  walls.rs
src/ui/: healthbar.rs  mod.rs
src/weapon/: bow.rs  cooldown.rs  gun.rs  mod.rs
src/weapons/: bow.rs  weapon.rs
src/world/: infinity_map.rs  level1.rs  map.rs  mod.rs  simple_map.rs  walls.rs
src/world/levels/: level0.rs  level1.rs  mod.rs
