[package]
name = "BulletOnWheels"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16"
enum_dispatch = "0.3.13"
bevy_rapier2d = "*"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3