[package]
name = "BulletOnWheels"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["track_location"] }
bevy_rapier2d = "0.32.0"
rand = "0.9.2"
bevy_lunex = "*"
bevy-inspector-egui = "0.35.0"
glam = "0.30.9"
test-case = "3.3.1"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
image = "0.25.7"
imageproc = "0.24"

